[gd_scene load_steps=38 format=3 uid="uid://bp7kvn5fiwg8d"]

[ext_resource type="Script" path="res://Scripts/input.gd" id="1_1r508"]
[ext_resource type="FontFile" uid="uid://ciw1lr8jmf73g" path="res://Fonts/MayfairNbpBold-gAA4.ttf" id="1_vpoiy"]
[ext_resource type="Script" path="res://Scripts/game.gd" id="1_wkkqi"]
[ext_resource type="FontFile" uid="uid://dcyy5o1ebxldj" path="res://Fonts/Setiperu-lgvy.ttf" id="3_8guhw"]
[ext_resource type="Script" path="res://Scripts/data_compiler.gd" id="4_aushr"]
[ext_resource type="FontFile" uid="uid://ba6qoiqqq68br" path="res://Fonts/MerchantCopyDoublesize-jE7R.ttf" id="4_ulr4l"]
[ext_resource type="FontFile" uid="uid://c4gcb3wh1uhqq" path="res://Fonts/EpsonMxSeriesDmp-ZVRG8.ttf" id="5_e2oq1"]
[ext_resource type="Script" path="res://Scripts/puzzle_generator.gd" id="5_pllv3"]
[ext_resource type="Script" path="res://Scripts/plaintext_data.gd" id="6_6ba52"]
[ext_resource type="Script" path="res://Scripts/data_encoder.gd" id="7_025sy"]
[ext_resource type="Script" path="res://Scripts/result_check.gd" id="8_lhb8j"]
[ext_resource type="Shader" path="res://Shaders/crt.gdshader" id="11_h73tq"]
[ext_resource type="Texture2D" uid="uid://q3q25mumrll7" path="res://DOXXtech logo.png" id="11_uvlpr"]
[ext_resource type="AudioStream" uid="uid://bqujn053oc4h3" path="res://Sounds/running_loop.wav" id="14_8mvsj"]
[ext_resource type="AudioStream" uid="uid://d5kk036j4s5o" path="res://Sounds/startup_click.wav" id="15_ub5nr"]
[ext_resource type="AudioStream" uid="uid://dd5khjlpfs87e" path="res://Sounds/ending_connect.wav" id="16_6qnjg"]
[ext_resource type="AudioStream" uid="uid://10x8e0d6b3px" path="res://Sounds/ending_loop.wav" id="17_k88vr"]
[ext_resource type="AudioStream" uid="uid://b04axjvy1u3ye" path="res://Sounds/correct_beep.wav" id="18_s4o57"]
[ext_resource type="AudioStream" uid="uid://ku6d8rg0kwod" path="res://Sounds/incorrect_beep.wav" id="19_yev6r"]
[ext_resource type="AudioStream" uid="uid://dr5lgyb7djmun" path="res://Sounds/note_shuff_1.wav" id="20_o07dp"]
[ext_resource type="AudioStream" uid="uid://dw2608c3uppn6" path="res://Sounds/note_shuff_2.wav" id="21_i7r6p"]
[ext_resource type="AudioStream" uid="uid://c3akhrab20dg7" path="res://Sounds/note_shuff_3.wav" id="22_qyae3"]
[ext_resource type="AudioStream" uid="uid://n8d4lcry2s5x" path="res://Sounds/note_shuff_4.wav" id="23_b6gex"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w4c2w"]
bg_color = Color(0.0253638, 0.0253638, 0.0253638, 1)

[sub_resource type="Theme" id="Theme_r4c3q"]
default_font = ExtResource("1_vpoiy")
default_font_size = 28

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eguma"]
bg_color = Color(0.196078, 0.803922, 0.196078, 0.0980392)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wetox"]
bg_color = Color(0.196078, 0.803922, 0.196078, 0.294118)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bb7m0"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_brj82"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qgrsl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uof1j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gl2c2"]
bg_color = Color(0.862745, 0.0784314, 0.235294, 0.0980392)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lo8e4"]
bg_color = Color(0.862745, 0.0784314, 0.235294, 0.294118)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cymo1"]
bg_color = Color(0.254902, 0.411765, 0.882353, 0.0980392)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cgf81"]
bg_color = Color(0.254902, 0.411765, 0.882353, 0.294118)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xrkqu"]
shader = ExtResource("11_h73tq")
shader_parameter/crt_brightness = 3.118
shader_parameter/crt_ghost = 0.3
shader_parameter/crt_grid = 0.35
shader_parameter/crt_noise = 0.079
shader_parameter/crt_curve = 0.005

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b0uqq"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wkkqi")

[node name="DataCompiler" type="Node" parent="."]
script = ExtResource("4_aushr")

[node name="PuzzleGenerator" type="Node" parent="."]
script = ExtResource("5_pllv3")

[node name="PlaintextData" type="Node" parent="."]
script = ExtResource("6_6ba52")

[node name="DataEncoder" type="Node" parent="."]
script = ExtResource("7_025sy")

[node name="ResultCheck" type="Node" parent="."]
script = ExtResource("8_lhb8j")

[node name="round_timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="crt" type="CanvasLayer" parent="."]

[node name="BG" type="PanelContainer" parent="crt"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w4c2w")

[node name="MarginContainer" type="MarginContainer" parent="crt/BG"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Gamescreen" type="VBoxContainer" parent="crt/BG/MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_r4c3q")
theme_override_constants/separation = 10

[node name="time_bar" type="ProgressBar" parent="crt/BG/MarginContainer/Gamescreen"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/background = SubResource("StyleBoxFlat_eguma")
theme_override_styles/fill = SubResource("StyleBoxFlat_wetox")
max_value = 30.0
step = 1.0
value = 30.0
show_percentage = false

[node name="GameInfo" type="PanelContainer" parent="crt/BG/MarginContainer/Gamescreen"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bb7m0")

[node name="ScrollContainer" type="ScrollContainer" parent="crt/BG/MarginContainer/Gamescreen/GameInfo"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="DataDisplay" type="RichTextLabel" parent="crt/BG/MarginContainer/Gamescreen/GameInfo/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/line_separation = 5
theme_override_fonts/italics_font = ExtResource("3_8guhw")
theme_override_fonts/bold_font = ExtResource("4_ulr4l")
theme_override_font_sizes/italics_font_size = 22
theme_override_font_sizes/bold_font_size = 14
bbcode_enabled = true
text = "[i]secret scovex text here[/i]terst
[b][color=gold][[ContVal]][/color]((PointInt))[color=crimson]TilReup[/color][color=royalblue]{{CalVerr}}[/color]"
fit_content = true
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="InputArea" type="PanelContainer" parent="crt/BG/MarginContainer/Gamescreen"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_brj82")

[node name="HBoxContainer" type="HBoxContainer" parent="crt/BG/MarginContainer/Gamescreen/InputArea"]
layout_mode = 2

[node name="Caret" type="Label" parent="crt/BG/MarginContainer/Gamescreen/InputArea/HBoxContainer"]
layout_mode = 2
text = ">"

[node name="Input" type="LineEdit" parent="crt/BG/MarginContainer/Gamescreen/InputArea/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_qgrsl")
theme_override_styles/normal = SubResource("StyleBoxEmpty_uof1j")
context_menu_enabled = false
clear_button_enabled = true
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true
caret_force_displayed = true
script = ExtResource("1_1r508")

[node name="life_bar" type="ProgressBar" parent="crt/BG/MarginContainer/Gamescreen"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_gl2c2")
theme_override_styles/fill = SubResource("StyleBoxFlat_lo8e4")
max_value = 10.0
step = 1.0
value = 10.0

[node name="completion_bar" type="ProgressBar" parent="crt/BG/MarginContainer/Gamescreen"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_cymo1")
theme_override_styles/fill = SubResource("StyleBoxFlat_cgf81")
max_value = 20.0
step = 1.0
value = 20.0

[node name="DoxxLogo" type="TextureRect" parent="crt"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_uvlpr")

[node name="ScreenBlack" type="ColorRect" parent="crt"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="crt"]
material = SubResource("ShaderMaterial_xrkqu")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="nocrt" type="CanvasLayer" parent="."]

[node name="Manual" type="PanelContainer" parent="nocrt"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = 960.0
offset_right = -47.0
offset_bottom = 940.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b0uqq")

[node name="MarginContainer" type="MarginContainer" parent="nocrt/Manual"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ManualText" type="RichTextLabel" parent="nocrt/Manual/MarginContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0.0980392, 0.745098)
theme_override_fonts/normal_font = ExtResource("5_e2oq1")
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "Response Rules

Keywords determine what response phrase should be typed:
 ContVal – Var_Respec
 PointInt – formatPNTR
 TilReup – DelCurrTval
 CalVerr – redo-verico
 TeeJunct – rmvSRClimit
 AwitDIL – Controls.dlaw
 REZInit – hdVcall
 QuelFor – RVFbreak

Colours determine the prefix that should be added to the beginning of the response phrase:
 Red – NULLrf-
 Yellow – XPRT_
 Blue – lbd:
 Green – verCON/
 
Flares around the keyword determine a symbol that must be placed at the end of the response phrase:
 (()) - %
 {{}} - |
 [[]] - @
 <<>> - ^"
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="TESTButton" type="Button" parent="nocrt"]
visible = false
offset_left = 1330.0
offset_top = 841.0
offset_right = 1427.0
offset_bottom = 878.0
text = "TEST"

[node name="Sounds" type="Node" parent="."]

[node name="bgs" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("14_8mvsj")

[node name="startup" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("15_ub5nr")

[node name="end_start" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("16_6qnjg")

[node name="end_loop" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("17_k88vr")

[node name="correct_ping" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("18_s4o57")

[node name="incorrect_ping" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("19_yev6r")

[node name="noteshuff_1" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("20_o07dp")

[node name="noteshuff_2" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("21_i7r6p")

[node name="noteshuff_3" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("22_qyae3")

[node name="noteshuff_4" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("23_b6gex")

[connection signal="check_results" from="." to="ResultCheck" method="_on_game_check_results"]
[connection signal="generate_data" from="." to="PuzzleGenerator" method="_on_game_generate_data"]
[connection signal="generate_data" from="." to="PlaintextData" method="_on_game_generate_data"]
[connection signal="tutorial_check_results" from="." to="ResultCheck" method="_on_game_tutorial_check_results"]
[connection signal="new_final_data" from="DataCompiler" to="." method="_on_data_compiler_new_final_data"]
[connection signal="new_puzzle_params" from="PuzzleGenerator" to="." method="_on_puzzle_generator_new_puzzle_params"]
[connection signal="new_puzzle_params" from="PuzzleGenerator" to="DataCompiler" method="_on_puzzle_generator_new_puzzle_params"]
[connection signal="new_plaintext" from="PlaintextData" to="DataEncoder" method="_on_plaintext_data_new_plaintext"]
[connection signal="new_encoded" from="DataEncoder" to="DataCompiler" method="_on_data_encoder_new_encoded"]
[connection signal="correct_ping" from="ResultCheck" to="." method="_on_result_check_correct_ping"]
[connection signal="incorrect_ping" from="ResultCheck" to="." method="_on_result_check_incorrect_ping"]
[connection signal="reset_game" from="ResultCheck" to="." method="_on_result_check_reset_game"]
[connection signal="results_complete" from="ResultCheck" to="." method="_on_result_check_results_complete"]
[connection signal="timeout" from="round_timer" to="." method="_on_round_timer_timeout"]
[connection signal="timeout" from="round_timer" to="crt/BG/MarginContainer/Gamescreen/InputArea/HBoxContainer/Input" method="_on_round_timer_timeout"]
[connection signal="text_submitted" from="crt/BG/MarginContainer/Gamescreen/InputArea/HBoxContainer/Input" to="." method="_on_input_text_submitted"]
[connection signal="text_submitted" from="crt/BG/MarginContainer/Gamescreen/InputArea/HBoxContainer/Input" to="crt/BG/MarginContainer/Gamescreen/InputArea/HBoxContainer/Input" method="_on_text_submitted"]
[connection signal="pressed" from="nocrt/TESTButton" to="." method="_on_test_button_pressed"]
